--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+		<!--dependency>
+      		<groupId>com.fasterxml.jackson.dataformat</groupId>
+      		<artifactId>jackson-dataformat-xml</artifactId>
+   		</dependency-->	
 		<dependency>
       		<groupId>org.springdoc</groupId>
       		<artifactId>springdoc-openapi-ui</artifactId>
