Refactor: Create controller, repository, service packages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 logging.level.org.springframework=INFO
+#see all /actuator enpoints 
+management.endpoints.web.exposure.include=*
+#Enable h2 console
+spring.h2.console.enabled=true
+#add DB URL
+spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.defer-datasource-initialization=true
